Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-70079

Qt Wayland Compositor resize fails randomly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.12.1
    • 5.11.0
    • Other
    • QC s820 ADP board + VM Linux on D6 + Qt 5.10.1 + DRM atomic API patches
    • Integrity, Linux/Other display system
    • c2136fe66583c2efb5abfc33c9bf1607c0574a59

    Description

      Resizing ShellItem causes randomly damaged image with unexpected width. This can be reproduced with slightly modified ivi-compositor example and happens only with virtualized Linux running on INTEGRITY hypervisor on ADP board. This also contains backported DRM atomic API patches on top of Qt 5.11, so not directly related to 5.11 version

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kiollila Kimmo Ollila
            kiollila Kimmo Ollila
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes